# enhanced-network-api-corporate

./: .coverage  .env  .env.production  .env.template  .gitignore  .gitignore.bak  3D_VIEWER_VERIFICATION.md  BABYLON_FIXES.md  BROWSER_MCP_SETUP.md  CONTRIBUTING.md  Dockerfile  FINAL_TEST_REPORT.md  GEMINI.md  GITHUB_CREATION_CHECKLIST.md  GITHUB_SETUP_GUIDE.md  LICENSE  Makefile  QUICK_START_TOPOLOGY.md  README.md  README_DOCKER.md  REAL_DATA_TEST_REPORT.md  Untitled-1  appcatalog.txt  apptree.txt  convert_vss_to_svg.py  corporate.env.template  coverage.xml  create_realistic_icons.py  createnetworkfolder.md  docker-compose.corporate.yml  iconlab.html  implementation_plan.md  mcp_bridge.py  mcp_config.json  mcp_perplexity_server.py  mcp_sequential_thinking_server.py  mcp_topology_server.py  network_map.json  playwright_test.js  pre_commit_hook.py  (+14 more)
api/: FORTIMANAGER_API_SUMMARY.md  meraki_dashboard_api_summary.json
docs/: 3D_FORCE_GRAPH_ANALYSIS.md  AIR_GAPPED_DEPLOYMENT.md  AUTOMATED_TOPOLOGY_DIAGRAMS.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  DASHBOARD_INTEGRATION_FEASIBILITY.md  Efficiency Roadmap.md  FORTIGATE_MONITOR_INTEGRATION.md  FortiOS 7.6 FortiOS 7.6.4 Monitor API wifi.json  Help on class FortiManager in module.md  Help on class FortiOSAPI in module fortios.md  NETWORK_TOPOLOGY_WORKFLOW_GUIDE.md  NETWORK_TREE_LAYOUT.md  PLOTLY_NETWORK_GRAPHS_ANALYSIS.md  SSL_CONFIGURATION.md  VSS_TO_3D_WORKFLOW.md  iconlab.md
examples/: airgapped_example.py  policy_and_device_example.py
lab_3d_models/: demo.html  manifest.json
legacy_archive/: 2D_SVG_INTEGRATION_COMPLETE.md  AUTHENTICATION_SERIAL_FIXES_COMPLETE.md  BLANK_SCREEN_TROUBLESHOOTING.md  CSS_LINT_FIXES_COMPLETE.md  Creating Network Topology Diagrams from FortiManager and Meraki API Data Sources.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  DRIFT_PROTECTION_GUIDE.md  EXECUTE_NOW.md  FORTiOS_ICONS_COMPLETE.md  GETUNIQUEID_ERROR_FIXED.md  GETUNIQUEID_ERROR_FIXES_COMPLETE.md  IDE_LINT_STATUS_REPORT.md  JAVASCRIPT_LINT_FIXES_COMPLETE.md  LINT_FIXES_COMPLETE.md  LINUX_WORKFLOW_COMPLETE.md  MODEL_SPECIFIC_ICONS_COMPLETE.md  NETWORK_TOPOLOGY_FIXES_COMPLETE.md  PRODUCTION_TOPOLOGY_SYSTEM_COMPLETE.md  README.md  README_CORPORATE.md  REAL_DATA_UPDATES_COMPLETE.md  RESTORATION_SUMMARY.md  TOPOLOGY_FILE_INVENTORY.md  VSS_ERASER_AI_COMPLETE.md  VSS_ERASER_AI_QUICK_START.md  VSS_ERASER_AI_WORKFLOW.md  alternative_api_discovery.py  bearer_token_discovery.py  complete_fortigate_discovery.json  complete_fortigate_discovery.py  complete_topology.json  comprehensive_api_tester.py  config_validator.py  deep_fortigate_explorer.py  deploy_sealed.py  fmg_client_test.py  fortigate_api_discovery.json  fortigate_bearer_discovery.json  (+15 more)
nginx/: nginx.conf
realistic_3d_models/: manifest.json
reports/: test-report.html
scripts/: blender_batch_extrude.py  build-release.sh  build_static_assets.py  create_3d_models.py  create_model_specific_icons.py  deploy.sh  device_model_matcher.py  extract_fortinet_icons.py  generate_drawio_preview.py  generate_topology_artifacts.py  health-check.py  oui_builder.py  pre-deploy-check.sh  quick-test.sh  scrape_fortigate_docs.py  start_fortinet_stack.sh  start_platform_stack.sh  test_current_3d_system.py  tmux_fortinet_stack.sh  trigger_drawio_export.py  validate-config.py  visio_extract.py  vss_model_extraction_guide.py
src/: .env  .env.template
tests/: __init__.py  benchmark_efficiency.py  check_actual_content.py  check_js_syntax.py  check_webgl_init.py  conftest.py  debug_3d_rendering.py  debug_app_js_loading.py  debug_blank_page.py  debug_demo_loading.py  debug_device_positions.py  debug_icon_loading.py  debug_init_app.py  (+39 more)
(+803 files in other folders)
